Fixed all N+1 query path issue in api calls for this repo